﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2019-08-21
	Fixed: ArgumentNullException when saving a watchlist rule caused by update done on 2019-08-18.
### 2019-08-19
	Added: Legacy workaround setting is now saved if it's changed. UI configuration still missing.
	Fixed: Affinity limit mode now properly moves cores besides limiting them, avoiding reduction in number of cores when not necessary.
### 2019-08-18
	Changed: Watchlist saving should now happen less and only when actual changes have been made.
### 2019-08-16
	Fixed: Some errors related to processes exiting before we finish with things.
### 2019-08-15
	Fixed: Limit affinity strategy was behaving incorrectly (e.g. 0001 was converted to 1000).
	Fixed: Force affinity strategy was broken with the above fix.
### 2019-08-11
	Fixed: Internet upstate is now properly updated on the UI.
	Internal: A lot of internal changes should improve performance.
	Changed: Version number bump, there's just been too many improvements since 0.13 was new.

## [0.13...]
### 2019-08-08
	Changed: Event log now uses virtual mode which should make it much more responsive and less resource heavy under heavy load.
### 2019-08-06
	Changed: Attempt to reduce CPU usage or at least shift it from blocking other more important things.
### 2019-08-05
	Changed: Process path extraction now uses PInvoke GetModuleFilenameEx instead of MainModule.FileName as benchmarking pointed the PInvoke approach to be almost 10 times faster.
	Changed: Network link speed is no longer reported. Link state for IPv4 and IPv6 are reported separately, tho this may change.
	Changed: How network state reporting works. Hopefully it's more reliable now and less spammy.
	Fixed: Some bad cleanup code was fixed. Mostly affecting attempts to restart the app.
	Internal: Several internal events use now simpler mechanism.
### 2019-08-03