@@ -280,5 +280,14 @@ namespace Taskmaster.Process
 
 		[DllImport("kernel32.dll", SetLastError = true)]
 		internal static extern bool GetProcessIoCounters(IntPtr hProcess, out IO_COUNTERS counters);
+
+		/// <summary>
+		/// https://docs.microsoft.com/en-us/windows/desktop/api/winuser/nf-winuser-getwindowthreadprocessid
+		/// </summary>
+		/// <param name="hWnd">Window handle</param>
+		/// <param name="lpdwProcessId">Process ID of the hwnd's creator.</param>
+		/// <returns>Thread ID of the hwnd's creator</returns>
+		[DllImport("user32.dll")] // SetLastError=true
+		internal static extern uint GetWindowThreadProcessId(IntPtr hWnd, out int lpdwProcessId);
 	}
 }
