@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2019-08-23
+	Changed: Foreground hang detection. Apparent false positives are being detected for unknown reason, hopefully this fixes that. Effectiviness unconfirmed.
 ### 2019-08-21
 	Fixed: ArgumentNullException when saving a watchlist rule caused by update done on 2019-08-18.
 ### 2019-08-19
